--- a/chrome/components/one_arrowpanel.css
+++ b/chrome/components/one_arrowpanel.css
@@ -360,7 +360,7 @@ treechildren::-moz-tree-separator {
 /* Fix unwanted border color in sidebar-box */
 
 #browser {
-    --sidebar-border-color: var(--content-border-color) !important;
+    --sidebar-border-color: transparent !important;
 }
 
 /* Espacios de la sidebar[open] y más espacio para el splitter - <left> <right> side */
@@ -371,12 +371,12 @@ treechildren::-moz-tree-separator {
         padding-inline: 0 4px !important;
     }
 
-    &:has(#sidebar-box[checked="true"][positionend]) #tabbrowser-tabbox {
+    &:has(#sidebar-box[checked="true"][sidebar-positionend]) #tabbrowser-tabbox {
         padding-block: 2px 4px !important;
         padding-inline: 4px 0 !important;
     }
 
-    & #sidebar-box[positionend]{
+    & #sidebar-box[sidebar-positionend]{
         margin-inline: 0px 4px !important;
     }
 }
