--- a/chrome/components/one_root.css
+++ b/chrome/components/one_root.css
@@ -126,7 +126,7 @@
   --panel-separator-margin: var(--panel-separator-margin-vertical) var(--panel-separator-margin-horizontal) !important;
   
   --urlbar-icon-padding: 4px !important;                                                    /* padding de los iconos de la urlbar */
-  --panel-separator-color: color-mix(in srgb, 
+  /*--panel-separator-color: color-mix(in srgb, 
     var(--arrowpanel-background) 90%, var(--lwt-tab-text)) !important;                      /* separadores de menu desplegable de marcadores */
   
   --urlbar-popup-url-color: #96ddff !important;                                             /* Color urls de sujerencias de búsqueda */
