--- a/chrome/components/one_sound.css
+++ b/chrome/components/one_sound.css
@@ -1,5 +1,5 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
-   https://github.com/Godiesc/firefox-one */
+https://github.com/Godiesc/firefox-one */
 
 /* Remove unwanted extra tab width */
 
@@ -14,7 +14,7 @@
             }
         }
     }
-    
+
     &>.tabbrowser-tab {
         &:is([muted], [soundplaying], [activemedia-blocked]) {
             #tabbrowser-tabs[orient="horizontal"] &:not([pinned]) {
@@ -36,10 +36,10 @@
 /* Fixed glich when clic mute button */
 
 .tabbrowser-tab {
-    --tab-icon-end-margin: 5px !important;
+    --tab-icon-end-margin: 5.5px !important;
 
     &:is([muted], [soundplaying], [activemedia-blocked]) {
-        --tab-icon-end-margin: 2.5px !important;
+        --tab-icon-end-margin: 2.75px !important;
     }
 }
 
@@ -58,7 +58,7 @@
     inset-inline-start: var(--my-inset-inline-start) !important;
     background-image: var(--my-background-image) !important;
     background-size: var(--my-background-size) !important;
-    box-shadow: var(--my-box-shadow) !important;
+    /*box-shadow: var(--my-box-shadow) !important;/**/
     opacity: var(--my-opacity) !important;
     fill: var(--my-fill) !important;
     outline: var(--my-outline) !important;
@@ -93,20 +93,19 @@
 /* Normal tabs - Playing icon */
 
 .tab-audio-button[soundplaying] {
-    --my-background-image: url("chrome://browser/skin/tabbrowser/tab-audio-playing-small.svg") !important;
-    /*--button-background-color-ghost: color-mix(in srgb, var(--contrast-color), transparent) !important;/**/
-    --button-background-color-ghost-hover: var(--lwt-tab-text) !important;
+    --my-background-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
+    --button-background-color-ghost: color-mix(in srgb, var(--contrast-color), transparent) !important;
+    --button-background-color-ghost-hover: color-mix(in srgb, var(--contrast-color), transparent) !important;
     --button-background-color-ghost-active: color-mix(in srgb, var(--contrast-color), transparent) !important;
-    --button-border-radius: 3px !important;
-    /*--my-background-size: 10px !important;/**/
-    --my-outline: none !important;
+    --my-background-size: 10px !important;
+    --my-outline: 1px solid var(--general-color) !important;
     --my-outline-offset: -2px !important;
-    --my-box-shadow: none !important;
-    --my-fill: var(--lwt-tab-text) !important;
+    /*--my-box-shadow: inset 0 0 0 1px var(--general-color) !important;/**/
+    --my-fill: var(--general-color)  !important;
 
     &:hover {
-        /*--my-outline: 1px solid var(--lwt-tab-text) !important;/**/
-        --my-fill: var(--contrast-color) !important;
+        --my-outline: 1px solid var(--lwt-tab-text) !important;
+        --my-fill: var(--lwt-tab-text) !important;
     }
 }
 
@@ -119,11 +118,9 @@
     --my-background-image: url("../icons/paused.svg") !important;
     --button-background-color-ghost-hover: transparent !important;
     --button-background-color-ghost-active: transparent !important;
-    --button-border-radius: 50% !important;
     --my-background-size: 8px !important;
     --my-outline: 1px solid var(--lwt-tab-text) !important;
     --my-outline-offset: -3px !important;
-    --my-box-shadow: inset 0 0 0 1px var(--contrast-color) !important;
     --my-fill: var(--lwt-tab-text) !important;
     --my-opacity: 0.8 !important;
 
@@ -186,7 +183,7 @@
     }
 }
 
-/* _______________ Sound icon for Vertical tabs _______________ */
+/* Sound icon for Vertical tabs - sidebar 'expanded' */
 
 @media -moz-pref("sidebar.verticalTabs") {
 
@@ -195,30 +192,69 @@
         --button-min-height-small: var(--button-size-icon-small) !important;
         --my-position: absolute !important;
         --my-top: calc(var(--tab-height-personal)/2 - 13px) !important;
-        --my-inset-inline-start: 25px !important;
+        --my-inset-inline-start: calc(var(--my-vertical-elements-width)/2 - 1px) !important;
         --my-background-size: 8px !important;
-        --my-outline-offset: -2px !important;
     }
 
-    .tab-audio-button[soundplaying] {
-        --my-background-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
-        --button-background-color-ghost: color-mix(in srgb, var(--contrast-color), transparent) !important;
-        --button-background-color-ghost-hover: color-mix(in srgb, var(--contrast-color), transparent) !important;
-        --button-background-color-ghost-active: color-mix(in srgb, var(--contrast-color), transparent) !important;
-        --button-border-radius: 50% !important;
-        --my-outline: 1px solid var(--general-color) !important;
-        --my-box-shadow: inset 0 0 0 1px var(--general-color) !important;
-        --my-fill: var(--general-color)  !important;
-
-        &:hover {
-            --general-color: var(--lwt-tab-text) !important;
-            --my-fill: var(--lwt-tab-text) !important;
-        }
+    .tab-audio-button:is([muted],[activemedia-blocked]) {
+        --button-size-icon-small: 16px !important;
+        --my-top: calc(var(--tab-height-personal)/2 - 14px) !important;
+        --my-inset-inline-start: calc(var(--my-vertical-elements-width)/2 - 2px) !important;
     }
 
     /* Hide favicon corner for 'playing' button */
 
     & .tabbrowser-tab .tab-icon-stack:not([crashed]):is([soundplaying]) :is(.tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay) {
         mask-image: url("../icons/tab_icon_masks.svg#SoundMask") !important;
+    }
+}
+
+/* ______________________________________ Sound icon when using default 'expand-on-hover' _______________________________________
+¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯ */
+
+.tab-icon-overlay {
+    @media -moz-pref("sidebar.visibility", "expand-on-hover") {
+        #tabbrowser-tabs[orient="vertical"][expanded] &:not([crashed]) {
+            &:is([soundplaying],[muted],[activemedia-blocked]) {
+                height: 12px !important;
+                width: 12px !important;
+                background: color-mix(in srgb, var(--contrast-color), transparent) !important;
+                list-style-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
+                outline: 1px solid var(--general-color) !important;
+                outline-offset: -1px !important;
+                box-shadow: inset 0 0 0 1px var(--general-color) !important;
+                fill: var(--general-color)  !important;
+                inset-inline-end: -8px !important;
+                top: -4px !important;
+
+                &:hover {
+                    outline: 1px solid var(--lwt-tab-text) !important;
+                    fill: var(--lwt-tab-text) !important;
+                }
+            }
+            &:is([muted],[activemedia-blocked]) {
+                list-style-image: url("../icons/paused.svg") !important;
+                background: transparent !important;
+                fill: var(--lwt-tab-text) !important;
+                outline-color: var(--lwt-tab-text) !important;
+                box-shadow: none !important;
+
+                &:hover {
+                    list-style-image: url("chrome://browser/skin/tabbrowser/tab-audio-blocked-small.svg") !important;
+                }
+            }
+
+            &:is([activemedia-blocked]) {
+                list-style-image: url("../icons/blocked.svg") !important;
+            }
+        }
+    }
+}
+
+.tab-throbber, .tab-icon-pending, .tab-icon-image, .tab-sharing-icon-overlay, .tab-icon-overlay {
+    @media -moz-pref("sidebar.visibility", "expand-on-hover") {
+        #tabbrowser-tabs[orient="vertical"][expanded] /*.tabbrowser-tab:not([pinned])/**/ & {
+            margin-inline-end: 5.5px !important;
+        }
     }
 }
