--- a/chrome/components/one_optional-features.css
+++ b/chrome/components/one_optional-features.css
@@ -84,9 +84,9 @@
     
     /* Fix for arrowpanels like save 'Bookmark' */
     panel:not(.in-menulist, #appMenu-popup) {
-        --panel-shadow-margin: 0px !important;
+        --panel-shadow-margin: 1px !important;
         --panel-background: transparent !important;
-        border-radius: 10px !important;
+        border-radius: var(--arrowpanel-border-radius) !important;
         background-size: auto 100vh !important; 
         background-image: linear-gradient(var(--arrowpanel-background, transparent), var(--arrowpanel-background, transparent)), 
                           linear-gradient(transparent, transparent), 
@@ -99,9 +99,16 @@
         background-image: linear-gradient(var(--arrowpanel-background, transparent), var(--arrowpanel-background, transparent)), 
                           linear-gradient(transparent, transparent), 
                           var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-        background-size: auto 100vh !important; 
-        background-position: -1px -1px !important;
-        border-radius: 8px !important; /* when using with main-image */
+        background-size: auto 100vh !important;
+        background-repeat: no-repeat;
+        border-radius: var(--arrowpanel-border-radius) !important; /* when using with main-image */
+    }
+    
+    menupopup:not(.in-menulist) {
+        background-image: linear-gradient(transparent, transparent), 
+                          var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+        background-position: 1px 1px !important;
+        background-clip: none !important;
     }
 
     @media (-moz-platform: windows), (-moz-platform: linux) {
